--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
 @media only screen and (min-width: 992px)
  {
      #tripRed{
+         color: red;
         text-decoration: none;
      }
          
@@ -204,6 +205,7 @@ body{
 }
 @media only screen and (min-width: 768px) and (max-width:992px) {
     #tripRed{
+        color: red;
         text-decoration: none;
      }
     #textA{
@@ -389,6 +391,7 @@ body{
 }
 @media only screen and (min-width: 480px) and (max-width:767px) {
     #tripRed{
+        color: red;
         text-decoration: none;
      }
     #textA{
@@ -567,6 +570,7 @@ body{
 }
 @media only screen and (max-width: 480px) and (min-width: 170px) {
     #tripRed{
+        color: red;
         text-decoration: none;
      }
     .grid-container{
@@ -741,6 +745,7 @@ body{
 }
 @media only screen and (max-width: 170px) {
     #tripRed{
+        color: red;
         text-decoration: none;
      }
     .grid-container{
